--- a/src/app/components/actividades/activity-5/activity-5.component.css
+++ b/src/app/components/actividades/activity-5/activity-5.component.css
@@ -22,7 +22,8 @@ p {
     /*background-color: rgba(239, 244, 245, 0.812);*/
     height: 100%;  
     overflow-y: auto;
-    background-image: url('../../../../assets/img/background.jpg');
+        /*background-image: url('../../../../assets/img/background.jpg');*/
+    background-color: #7fbddb;
     background-size: cover; /* para cubrir todo el área del fondo */
     background-position: center; /* para centrar la imagen */
   }
