--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -78,7 +78,7 @@
               <path d="M3.051 3.26a.5.5 0 0 1 .354-.613l1.932-.518a.5.5 0 0 1 .62.39c.655-.079 1.35-.117 2.043-.117.72 0 1.443.041 2.12.126a.5.5 0 0 1 .622-.399l1.932.518a.5.5 0 0 1 .306.729q.211.136.373.297c.408.408.78 1.05 1.095 1.772.32.733.599 1.591.805 2.466s.34 1.78.364 2.606c.024.816-.059 1.602-.328 2.21a1.42 1.42 0 0 1-1.445.83c-.636-.067-1.115-.394-1.513-.773-.245-.232-.496-.526-.739-.808-.126-.148-.25-.292-.368-.423-.728-.804-1.597-1.527-3.224-1.527s-2.496.723-3.224 1.527c-.119.131-.242.275-.368.423-.243.282-.494.575-.739.808-.398.38-.877.706-1.513.773a1.42 1.42 0 0 1-1.445-.83c-.27-.608-.352-1.395-.329-2.21.024-.826.16-1.73.365-2.606.206-.875.486-1.733.805-2.466.315-.722.687-1.364 1.094-1.772a2.3 2.3 0 0 1 .433-.335l-.028-.079zm2.036.412c-.877.185-1.469.443-1.733.708-.276.276-.587.783-.885 1.465a14 14 0 0 0-.748 2.295 12.4 12.4 0 0 0-.339 2.406c-.022.755.062 1.368.243 1.776a.42.42 0 0 0 .426.24c.327-.034.61-.199.929-.502.212-.202.4-.423.615-.674.133-.156.276-.323.44-.504C4.861 9.969 5.978 9.027 8 9.027s3.139.942 3.965 1.855c.164.181.307.348.44.504.214.251.403.472.615.674.318.303.601.468.929.503a.42.42 0 0 0 .426-.241c.18-.408.265-1.02.243-1.776a12.4 12.4 0 0 0-.339-2.406 14 14 0 0 0-.748-2.295c-.298-.682-.61-1.19-.885-1.465-.264-.265-.856-.523-1.733-.708-.85-.179-1.877-.27-2.913-.27s-2.063.091-2.913.27"/>
             </svg>
           </div>
-          <h3 class="fs-3 text-body-emphasis">Acts. interactivas</h3>
+          <h3 class="fs-3 text-body-emphasis">Actividades interactivas</h3>
           <p>Actividades diseñadas específicamente para ayudar a los pacientes a identificar y abordar las cinco principales emociones: alegría, tristeza, miedo, enojo y asco.</p>
         </div>
         <div class="feature col">
@@ -89,7 +89,7 @@
             </svg>
           </div>
           <h3 class="fs-3 text-body-emphasis">Niveles de dificultad</h3>
-          <p>Actividades con niveles de dificultad ajustables según las necesidades y progresos individuales de cada paciente, definidos por los especialistas.</p>
+          <p>Los especialistas pueden ajustar los niveles de dificultad según las necesidades y progreso de cada paciente.</p>
         </div>
         <div class="feature col">
           <div
@@ -99,7 +99,7 @@
             </svg>
           </div>
           <h3 class="fs-3 text-body-emphasis">Estadística</h3>
-          <p>Reportes detallados y visuales que muestran el progreso del paciente a lo largo del tiempo, facilitando la toma de decisiones informadas por parte de los especialistas.</p>
+          <p>Visualización de gráficas, cuyos datos representan el número de aciertos y tiempo invertido en cada una de las actividades.</p>
         </div>
       </div>
     </div>
@@ -108,17 +108,15 @@
     <div class="container" id="custom-cards">
       <h2 class="pb-2 border-bottom fw-bold text-center">Colaboradores</h2>
   
-      <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
+      <div class="row row-cols-1 row-cols-lg-2 align-items-stretch g-4 py-5">
         <div class="col">
-          <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('../../../assets/img/angelitos.png');">
+          <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('../../../assets/img/angelitos.png');
+          background-size: cover; 
+                background-position: center; 
+                background-repeat: no-repeat;">
             <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
               <h4 class="text-black pt-5 mt-5 mb-4 display-6 lh-1 text-center">Apoyando angelitos con autismo</h4>
               <ul class="d-flex list-unstyled mt-auto">
-              
-                <li class="d-flex align-items-center me-3">
-                  <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#geo-fill"/></svg>
-                  <small class="text-dark">CDMX</small>
-                </li>
                 <li class="d-flex align-items-center">
                   <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#calendar3"/></svg>
                   <a href="https://angelitosconautismo.org/">Visitar</a>
@@ -128,32 +126,15 @@
           </div>
         </div>
   
-        <div class="col">
-          <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('../../../assets/img/escom.png');">
-            <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-              <ul class="d-flex list-unstyled mt-auto">
-                <li class="d-flex align-items-center me-3">
-                  <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#geo-fill"/></svg>
-                  <small class="text-dark">CDMX</small>
-                </li>
-                <li class="d-flex align-items-center">
-                  <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#calendar3"/></svg>
-                  <a href="https://www.escom.ipn.mx/">Visitar</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
 
         <div class="col">
-          <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('../../../assets/img/autismoEmociones.png');">
+          <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('../../../assets/img/autismoEmociones.png');
+                background-size: cover; 
+                background-position: center; 
+                background-repeat: no-repeat;">
             <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
               <h4 class="text-black pt-5 mt-5 mb-4 display-6 lh-1 text-center">Autismo Emociones</h4>
               <ul class="d-flex list-unstyled mt-auto">
-                <li class="d-flex align-items-center me-3">
-                  <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#geo-fill"/></svg>
-                  <small class="text-dark">CDMX</small>
-                </li>
                 <li class="d-flex align-items-center">
                   <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#calendar3"/></svg>
                   <a href="https://www.facebook.com/centroemociones">Visitar</a>
