--- a/src/app/components/actividades/activity-5/activity-5.component.css
+++ b/src/app/components/actividades/activity-5/activity-5.component.css
@@ -108,10 +108,6 @@ p {
 }
 
     
-  
-    .reduce-top-margin {
-      margin-top: -150px; /* Ajusta el valor según el espacio que quieras reducir */
-    }
     
   
     .center {
@@ -183,7 +179,7 @@ p {
       justify-content: center;
       align-items: center;
       text-align: center;
-      transform: translateY(0px);
+
     }
 
 
@@ -217,7 +213,6 @@ p {
       padding: 10px 20px; /* Añade relleno horizontal para que el texto no esté demasiado pegado a los bordes */
       margin: 0 auto; /* Centra el botón horizontalmente */
       margin-bottom: 40px;
-      margin-top: -550px;
     }
     
 
@@ -310,3 +305,165 @@ p {
     transition: transform 0.3s ease 0s;
 }
   
+
+
+/* Grid para el layout de la historia */
+.contenedor-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr; /* Dos columnas de igual ancho */
+  gap: 20px; /* Espacio entre las columnas */
+  align-items: start; /* Alinea los elementos al principio de cada columna */
+  padding: 20px;
+}
+
+.grid-img{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+  height: auto;/* Ancho automático para ocupar todo el ancho disponible *//* Ajusta la altura según sea necesario */
+  background-color: #ffffff;/* Color de fondo ligero para el área alrededor del video */
+  box-shadow: 
+  0px 3px 0 5px rgb(177, 176, 176);/* Sombra sutil alrededor del contenedor */
+  border-radius: 10px; /* Bordes redondeados */
+  box-sizing: border-box;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  line-height: 1.2;
+  padding: 10px 20px; /* Añade relleno horizontal para que el texto no esté demasiado pegado a los bordes */
+  margin: 0 auto; /* Centra el botón horizontalmente */
+  margin-bottom: 40px;
+}
+
+.grid-img img {
+  width: 100%; /* La imagen ocupa el 100% del contenedor */
+  max-width: 600px; /* Tamaño máximo de la imagen */
+  height: auto; /* Mantiene la proporción de la imagen */
+  border-radius: 10px; /* Bordes redondeados */
+}
+
+.grid-text-buttons {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; /* Espacio entre texto y botones */
+}
+
+.text-container p {
+  margin: 0;
+  font-size: 2em; /* Tamaño del texto */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: justify;
+  position: relative;
+  height: auto;
+  width: 100%;
+  max-height: 600px;
+  background-color: #ffffff;
+  padding: 1em; /* Usar em para que el padding sea relativo al tamaño de la fuente */
+  box-shadow: 0px 3px 0 5px rgb(177, 176, 176);
+  border-radius: 10px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  line-height: 1.2;
+}
+
+.buttons-container {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px; /* Espacio entre botones */
+}
+
+.opcion-btn {
+  background-color: #57c95b;
+  color: white;
+  border: none;
+  border-radius: 20px;
+  padding: 10px;
+  text-align: center;
+  font-size: 25px;
+  cursor: pointer;
+  box-shadow: 0px 2px 0px 4px #2faf35; 
+  transition: background-color 0.3s, transform 0.3s;
+  margin-top: 10px;
+}
+
+.opcion-btn:hover {
+  background-color: #45a049;
+  transform: translateY(-5px);
+}
+
+.opcion-btn:active {
+  background-color: #367939;
+}
+
+/* Modal específico para errores */
+.modal-content {
+  background-color: #ffffff;
+  border-radius: 10px;
+  padding: 20px;
+}
+
+/* Estilo para el header del modal con color rojo */
+.modal-header-red {
+  background-color: #efa5a5; /* Color de fondo rojo */
+  color: white;             /* Color del texto en blanco */
+  border-top-left-radius: 4px;  /* Opcional: Añade bordes redondeados a la esquina superior izquierda */
+  border-top-right-radius: 4px; /* Opcional: Añade bordes redondeados a la esquina superior derecha */
+  padding: 1rem; /* Añade un poco de espacio alrededor del texto */
+}
+
+/* Ajuste del botón de cierre */
+.modal-header-red .btn-close {
+  filter: invert(1); /* Invertir el color del botón de cierre para que sea visible en el fondo rojo */
+}
+
+
+.modal-body p {
+  font-size: 1em;
+}
+
+.modal-footer .btn {
+  background-color: #57c95b;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.modal-footer .btn:hover {
+  background-color: #45a049;
+}
+
+.modal-footer .btn:active {
+  background-color: #367939;
+}
+
+
+/* Media query para pantallas más pequeñas */
+@media (max-width: 1100px) {
+  .contenedor-grid {
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    grid-template-columns: 1fr; /* Cambia a una sola columna */
+    grid-template-rows: auto auto auto; /* Tres filas automáticas */
+    gap: 10px; /* Espacio entre filas */
+  }
+
+  .grid-img {
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    order: 1; /* La imagen se muestra primero */
+  }
+
+  .grid-text-buttons {
+    order: 2; /* El texto y los botones se muestran después de la imagen */
+  }
+
+  .buttons-container {
+    order: 3; /* Los botones se muestran después del texto */
+  }
+}
