--- a/src/app/components/estadistica/estadistica-actividad/estadistica-actividad.component.css
+++ b/src/app/components/estadistica/estadistica-actividad/estadistica-actividad.component.css
@@ -11,8 +11,8 @@
     text-align: center;
     height: auto;
     width: auto;
-    max-height: 600px; /* Asume que el contenedor toma toda la altura de la ventana */
-    max-width: 800px;
+    max-height: 20%; /* Asume que el contenedor toma toda la altura de la ventana */
+    max-width: 900px;
     background-color: #ffffff;/* Color de fondo ligero para el área alrededor del video */
     padding: 10px;
     box-shadow: 
@@ -25,9 +25,45 @@
   }
 
   .centrado{
-    display: grid;
+    display: flex;
     align-items: center;
     text-align: center;
-    width: 60%; /* O el ancho que desees */
-    margin: 0 auto;
+    justify-content: center;
+
+    width: 100%; /* O el ancho que desees */
+
   }
+
+
+
+  /* estilos.component.css */
+
+.grid-container {
+  display: grid;
+  gap: 20px;
+  grid-template-columns: repeat(2, 1fr); /* 2 columnas */
+
+}
+
+.grid-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding: 70px;
+  background-color: #ffffff;
+  box-shadow: 0px 3px 5px rgb(177, 176, 176);
+  border-radius: 10px;
+  height: auto;
+  overflow: visible;
+}
+
+@media (max-width: 980px) {
+  .grid-container {
+    grid-template-columns: 1fr; /* 1 columna en pantallas más pequeñas */
+  }
+}
+
+
+
+
