Modals, baja especialista y baja paciente

--- a/src/app/components/despliegue-especialistas/despliegue-especialistas.component.html
+++ b/src/app/components/despliegue-especialistas/despliegue-especialistas.component.html
@@ -56,13 +56,33 @@
                                 </div>
                             </td>
                             <td class="text-center">
-                                <button class="image-button" (click)="mostrarAlert(especialista)">
+                                <button class="image-button" data-bs-toggle="modal" data-bs-target="#Backdrop">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="red"
                                         class="bi bi-x-circle-fill" viewBox="0 0 16 16">
                                         <path
                                             d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293z" />
                                     </svg>
                                 </button>
+
+
+
+                                <!-- Modal para confirmar cierre -->
+                                <div class="modal fade" id="Backdrop" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                                    <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-body">
+                                            ¿Estás seguro de que deseas eliminar a este especialista?
+                                        </div>
+                                        <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Volver</button>
+                                        <button type="button" class="btn btn-primary modal-green" data-bs-dismiss="modal" (click)="eliminarPaciente(especialista.correo)">Cerrar</button>
+                                        </div>
+                                    </div>
+                                    </div>
+                                </div>
+
+
+
                             </td>
                         </tr>
                     </tbody>
