Correccion estadistica actividades con boton de cerrar

--- a/src/app/components/actividades/activity-3/activity-3.component.html
+++ b/src/app/components/actividades/activity-3/activity-3.component.html
@@ -19,7 +19,7 @@
     <mat-grid-tile colspan="1">
       <div class="image-button">
       <button mat-raised-button class="buttonimg" (click)="onButtonClick(currentImages[0])">
-        <img [src]="getImagePath(currentImages[0])" alt="Imagen Correcta">
+        <img [src]="getImagePath(currentImages[0])" alt="Imagen Correcta" class="img">
       </button>
       </div>
     </mat-grid-tile>
