--- a/src/app/components/actividades/activity-3/activity-3.component.css
+++ b/src/app/components/actividades/activity-3/activity-3.component.css
@@ -33,8 +33,8 @@ html, body {
     width: 100%; /* La imagen ocupa todo el ancho del botón */
     height: 100%;
     max-width: 400px; /* Ancho del botón */
-    max-height: 300px; /* Altura del botón */
-    padding: 10px; /* Espaciado alrededor de la imagen dentro del botón */
+    max-height: 500px; /* Altura del botón */
+    padding: 30px; /* Espaciado alrededor de la imagen dentro del botón */
     margin-right: 10px;
     margin-left: 10px;
     background-color: #ffffff;
@@ -52,14 +52,15 @@ html, body {
     width: 100%; /* La imagen ocupa todo el ancho del botón */
     height: 100%;
     max-width: 500px; /* Ancho del botón */
-    max-height: 300px; /* Altura del botón */
+    max-height: 500px; /* Altura del botón */
     
   }
   
   .buttonimg img {
-    width: 100%; /* La imagen ocupa todo el ancho del botón */
+    width: 100%;
     height: 100%; /* La imagen ocupa todo el alto del botón */
   }
+
   
   
   .center {
