correcion voton visitar inicio componente

--- a/src/app/components/inicio/inicio.component.css
+++ b/src/app/components/inicio/inicio.component.css
@@ -130,4 +130,10 @@
   margin-bottom: 1rem; /* Margen inferior */
 }
 
+.right{
+  display: flex;
+  align-items: right;
+  text-align: right;
+  justify-content: right;
+}
 
