--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -116,7 +116,7 @@
                 background-repeat: no-repeat;">
             <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
               <h4 class="text-black pt-5 mt-5 mb-4 display-6 lh-1 text-center">Apoyando angelitos con autismo</h4>
-              <ul class="d-flex list-unstyled mt-auto">
+              <ul class="d-flex list-unstyled mt-auto right">
                 <li class="d-flex align-items-center">
                   <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#calendar3"/></svg>
                   <a href="https://angelitosconautismo.org/">Visitar</a>
@@ -134,7 +134,7 @@
                 background-repeat: no-repeat;">
             <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
               <h4 class="text-black pt-5 mt-5 mb-4 display-6 lh-1 text-center">Autismo Emociones</h4>
-              <ul class="d-flex list-unstyled mt-auto">
+              <ul class="d-flex list-unstyled mt-auto right">
                 <li class="d-flex align-items-center">
                   <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#calendar3"/></svg>
                   <a href="https://www.facebook.com/centroemociones">Visitar</a>
