--- a/src/app/components/alta-usuario/alta-usuario.component.html
+++ b/src/app/components/alta-usuario/alta-usuario.component.html
@@ -74,9 +74,12 @@
                                     </div>-->
 
                                     <label for="contrasena" class="form-label">Contraseña</label>
-                                    <input type="password" class="form-control" id="contrasena" minlength="8" [(ngModel)]="contrasena" required name="contrasena" (input)="validatePassword()">
+                                    <input type="password" class="form-control" id="contrasena" minlength="8" [(ngModel)]="contrasena" required name="contrasena" (input)="validatePassword()" pattern="(?=.*[a-z])(?=.*[A-Z]).{8,}" minlength="8">
+                                    <div class="invalid-feedback">
+                                        La contraseña debe contener 8 caracteres.
+                                    </div>
                                     <div *ngIf="passwordInvalid" class="invalid-feedback">
-                                    La contraseña debe contener 8 caracteres, al menos una mayúscula, una minúscula, un número y un carácter especial.
+                                    Debe contener al menos una mayúscula, una minúscula, un número y un carácter especial.
                                     </div>
                                     
                                 </div>
