--- a/src/app/components/alta-usuario/alta-usuario.component.html
+++ b/src/app/components/alta-usuario/alta-usuario.component.html
@@ -74,13 +74,11 @@
                                     </div>-->
 
                                     <label for="contrasena" class="form-label">Contraseña</label>
-                                    <input type="password" class="form-control" id="contrasena" minlength="8" [(ngModel)]="contrasena" required name="contrasena" (input)="validatePassword()" pattern="(?=.*[a-z])(?=.*[A-Z]).{8,}" minlength="8">
+                                    <input type="password" class="form-control" id="contrasena" [(ngModel)]="contrasena" required name="contrasena" (input)="validatePassword()" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[\W_]).{8,}$" minlength="8">
                                     <div class="invalid-feedback">
-                                        La contraseña debe contener 8 caracteres.
+                                        La contraseña debe tener un tamaño mínimo de 8 caracteres y combinar una letra mayúscula, una letra minúscula, un número y un caracter especial.
                                     </div>
-                                    <div *ngIf="passwordInvalid" class="invalid-feedback">
-                                    Debe contener al menos una mayúscula, una minúscula, un número y un carácter especial.
-                                    </div>
+                                    
                                     
                                 </div>
 
