cambio footer, privacidad en alta

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,8 +2,7 @@
     <hr class="hr" />
     <p class="mb-1">&copy; 2023–2024 TEApp</p>
     <ul class="list-inline">
-        <li class="list-inline-item"><a href="#">Privacidad</a></li>
-        <li class="list-inline-item"><a href="#">Términos y condiciones</a></li>
-        <li class="list-inline-item"><a href="#">Contacto</a></li>
+        <li class="list-inline-item"><a href="https://www.gob.mx/indesol/documentos/ley-federal-de-transparencia-y-acceso-a-la-informacion-publica-marco-normativo">Privacidad</a></li>
+        <li class="list-inline-item"><a href="mailto:teapp.3sc0m@gmail.com">Contacto</a></li>
     </ul>
 </footer>
