--- a/src/app/components/alta-usuario/alta-usuario.component.html
+++ b/src/app/components/alta-usuario/alta-usuario.component.html
@@ -63,23 +63,11 @@
                                 </div>
 
                                 <div class="col-sm-6">
-                                    <!--<label for="contrasena" class="form-label">Contraseña</label>
-                                    <input  type="password" class="form-control" id="contrasena"minlength="8" ng-pattern="/^(?=.*[A-Z])(?=.*[a-z])(?=.*\d)(?=.*[@#\$%\^&\*]).{8,}$/" [(ngModel)]="contrasena " ng-model="contrasena"
-                                        required name="contrasena">
-                                    <div class="invalid-feedback">
-                                        La Contraseña es un dato obligatorio.
-                                    </div>
-                                    <div class="invalid-feedback">
-                                        La Contraseña es un dato obligatorio.
-                                    </div>-->
-
                                     <label for="contrasena" class="form-label">Contraseña</label>
                                     <input type="password" class="form-control" id="contrasena" [(ngModel)]="contrasena" required name="contrasena" (input)="validatePassword()" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[\W_]).{8,}$" minlength="8">
                                     <div class="invalid-feedback">
                                         La contraseña debe tener un tamaño mínimo de 8 caracteres y combinar una letra mayúscula, una letra minúscula, un número y un caracter especial.
                                     </div>
-                                    
-                                    
                                 </div>
 
                                 <div class="col-sm-6">
@@ -95,10 +83,14 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="form-check form-switch py-4">
+                                <input class="form-check-input" type="checkbox" [(ngModel)]="privacidadBtn" name="privacidadBtn" (change)="tipoUser()" role="switch" id="flexSwitchCheckChecked" checked>
+                                <label class="form-check-label" for="flexSwitchCheckChecked"><a href="https://www.gob.mx/indesol/documentos/ley-federal-de-transparencia-y-acceso-a-la-informacion-publica-marco-normativo" target="_blank">Acepto los los términos de privacidad</a></label>
+                            </div>
 
                             <hr class="my-3">
 
-                            <button class="w-100 btn btn-primary btn-lg" type="submit">Registrar</button>
+                            <button class="w-100 btn btn-primary btn-lg" [disabled]="!privacidadBtn" type="submit">Registrar</button>
                         </form>
                     </div>
                 </div>
