--- a/src/app/components/solicitud-recuperacion-contrasena/solicitud-recuperacion-contrasena.component.html
+++ b/src/app/components/solicitud-recuperacion-contrasena/solicitud-recuperacion-contrasena.component.html
@@ -45,7 +45,7 @@
             </div>
             <div class="py-2 form-floating">
                 <input type="password" class="form-control" id="floatingPassword" placeholder="" required [(ngModel)]="contrasena" (input)="validatePassword()" name="contrasena" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[\W_]).{8,}$" minlength="8">
-                <label for="floatingInput">Nueva contreseña</label>
+                <label for="floatingInput">Nueva contraseña</label>
                 <div class="invalid-feedback">
                     La contraseña debe tener un tamaño mínimo de 8 caracteres y combinar una letra mayúscula, una letra minúscula, un número y un caracter especial.
                 </div>
